# rag_science_questions

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
scripts/: cron_ingest.sh
sql/: schema.sql
src/: config.py  db.py
src/bot/: telegram_bot.py
src/core/: chunking.py  embeddings.py  generation.py  rerank.py  retrieval.py
src/ingest/: arxiv_client.py  backfill.py  incremental.py  run_ingest.py
src/query/: pipeline.py  run_query.py
src/web/: api.py  run_api.py
src/web/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/web/frontend/src/: App.tsx  index.css  main.tsx
src/web/frontend/src/components/: AnswerPanel.tsx  EvidenceDrawer.tsx  SearchBar.tsx  SourcesList.tsx  ThemeToggle.tsx
src/web/frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
src/web/frontend/src/lib/: api.ts  types.ts  utils.ts
