[project]
name = "arxiv-rag"
version = "0.1.0"
description = "RAG over arXiv papers with automatic incremental ingestion. Three decoupled processes (ingest, web API, Telegram bot) sharing only PostgreSQL + pgvector."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Config + validation
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",

    # Database
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",

    # HTTP client + resilience
    "httpx>=0.27",
    "tenacity>=9.0",

    # arXiv Atom feed parsing
    "feedparser>=6.0",

    # Local ML models (embeddings + reranker).
    # torch is declared explicitly so the [tool.uv.sources] override below
    # applies (routes Linux installs to the CPU wheel index; macOS keeps the
    # PyPI ARM64 wheel which already ships with MPS support).
    "torch>=2.4",
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    "numpy>=1.26",

    # Web API (Phase 4)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Telegram bot (Phase 5)
    "python-telegram-bot>=21.5",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

# This project is a runnable application, not a distributable library.
# `package = false` tells uv not to try to build/install src as a package.
[tool.uv]
package = false

# --- torch wheel routing -----------------------------------------------------
# On Linux the default PyPI torch wheel bundles CUDA (~2 GB). We don't have (or
# want) a GPU on the VPS, so we route torch to PyTorch's CPU-only index there.
# On macOS the PyPI ARM64 wheel already includes MPS support — no override.
# `explicit = true` on the index means it is used ONLY for packages that opt in
# via [tool.uv.sources] (avoids pulling unrelated packages from that index).
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
